# Chat_product_UI_integration

./: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  app.py  app_local.py  docker-compose.yml  fix_orb.py  importing.py  main.py  pyproject.toml  test_theme_api.py  test_users_api.py  testing.py  theme.json  users.json  widgets.json
agentic_flow/: .env
agentic_flow/components/: conversation_checkpointer.py  credentials_database.py  data_layer_persistance.py  mcp_servers.py
agentic_flow/local_storage/: __init__.py  credentials_db.dir  docker-compose.yml  real_estate_sales_mcp.py
agentic_flow/scripts/: connect_to_mcp.py  dummy_generate.py  tools.py  vectara_agent.py  vectara_app.py  vectara_test.py
agentic_flow/utils/: chainlit_logger.py  helper_functions.py  populate_real_estate_db.py  sqlite_schema.py  variables.py
public/: style.css
static/: desktop.css  desktop.js  filter-wizard.css  filter-wizard.js  script.js  settings.js  sidebar-wizard.css  sidebar-wizard.js  style-nhc.css  style-nhc.css.backup  style-readpo.css  style.css  translations.js
templates/: admin_dashboard.html  admin_login.html  admin_theme.html  admin_users.html  admin_widgets.html  dashboard.html  desktop.html  index.html  index.html.backup_before_vr  login.html  test-filter-wizard.html
vectara_agent/: Create_Agent_on_Vectara.py  DataBase_MCP_Server.py  Upload_MCP_Server_on_vectara.py  tools.py
