[project]
name = "aimodelchatproductsolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "langchain-core>=1.1.1",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "werkzeug>=3.1.4",
]
